--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</div>
 			</nav>
 		</header>
-		<script src="../nav.js"></script>
+		<script src="../common/nav/nav.js"></script>
 		<script src="home.js"></script>
 	</body>
 </html>
