--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="home.css" />
+		<link rel="stylesheet" href="./home/home.css" />
 		<title>Home | SHK</title>
 	</head>
 	<body>
@@ -37,6 +37,6 @@
 			</nav>
 		</header>
 		<script src="./common/nav/nav.js"></script>
-		<script src="home.js"></script>
+		<script src="./home/home.js"></script>
 	</body>
 </html>
