--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						/>
 						&nbsp; +91 99999 99999
 					</span>
-					<span class="main-icon"><img src="../images/SHK_logo" alt="" /></span>
+					<span class="main-icon"><img src="./common/images/SHK_logo" alt="" /></span>
 					<div class="social">
 						<img
 							src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
