--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./common/nav/nav.css" />
 		<link rel="stylesheet" href="./home/home.css" />
 		<title>Home | SHK</title>
 	</head>
@@ -18,7 +19,14 @@
 						/>
 						&nbsp; +91 99999 99999
 					</span>
-					<span class="main-icon"><img src="./common/images/SHK_logo" alt="" /></span>
+					<span class="menu-button"
+						><span></span
+						><img
+							src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
+					/></span>
+					<span class="main-icon"
+						><img src="./common/images/SHK_logo" alt=""
+					/></span>
 					<div class="social">
 						<img
 							src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
