--- a/index.html
+++ b/index.html
@@ -10,40 +10,59 @@
 	</head>
 	<body>
 		<header>
-			<nav>
-				<div class="top-nav">
-					<span class="contact"
-						><img
-							class="phone-icon"
-							src="https://img.icons8.com/color/48/000000/phone.png"
-						/>
-						&nbsp; +91 99999 99999
-					</span>
-					<span class="menu-button"
-						><span></span
-						><img
-							src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
-					/></span>
-					<span class="main-icon"
-						><img src="./common/images/SHK_logo" alt=""
-					/></span>
-					<div class="social">
-						<img
-							src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
-						/><img src="https://img.icons8.com/color/48/000000/facebook.png" />
-					</div>
+			<div class="top-nav">
+				<span class="contact"
+					><img
+						class="phone-icon"
+						src="https://img.icons8.com/color/48/000000/phone.png"
+					/>
+					&nbsp; +91 99999 99999
+				</span>
+				<span class="menu-button"
+					><span></span
+					><img
+						src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
+				/></span>
+				<span class="main-icon"
+					><img src="./common/images/SHK_logo" alt=""
+				/></span>
+				<div class="social">
+					<img
+						src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
+					/><img src="https://img.icons8.com/color/48/000000/facebook.png" />
 				</div>
-				<div class="bottom-nav">
-					<span><a href="#">HOME</a></span
-					><span><a href="#">ABOUT</a></span
-					><span><a href="#">ACADEMICS</a></span
-					><span><a href="#">FACILITIES</a></span
-					><span><a href="#">ACTIVITIES</a></span
-					><span><a href="#">PLACEMENTS</a></span
-					><span><a href="#">ADMISSION</a></span>
-				</div>
-			</nav>
+			</div>
+			<div class="bottom-nav">
+				<span><a href="#">HOME</a></span
+				><span><a href="#">ABOUT</a></span
+				><span><a href="#">ACADEMICS</a></span
+				><span><a href="#">FACILITIES</a></span
+				><span><a href="#">ACTIVITIES</a></span
+				><span><a href="#">PLACEMENTS</a></span
+				><span><a href="#">ADMISSION</a></span>
+			</div>
 		</header>
+		<div class="hero">
+			<img class="plane-hero" src="./home/img/airplane_png.png" alt="" />
+			<video src="./home/img/sky.mp4" autoplay></video>
+			<div class="hero-content">
+				<span>SHK AVIATION ACADEMY</span><br />
+				<span>The Sky is the limit...</span>
+			</div>
+		</div>
+		<section class="SHK-aviation">
+			<h1 class="SHK-title">SHK Aviation Academy</h1>
+			<p>
+				SHK AVIATION ACADEMY is a multidisciplinary institution offering
+				professional courses in the field of aviation. SHK AVIATION ACADEMY was
+				established in 2020 with a great visionary, to revolutionize the way
+				people are getting trained for Aviation industry. This institution is
+				run by Govindasamy Naidu Educational Trust, which is registered as a
+				Technical Education Society under the Societies Act, XXI of 1860. The
+				institute is approved Alagappa University, for conducting Aviation
+				related courses.
+			</p>
+		</section>
 		<script src="./common/nav/nav.js"></script>
 		<script src="./home/home.js"></script>
 	</body>
