--- a/index.html
+++ b/index.html
@@ -51,17 +51,19 @@
 			</div>
 		</div>
 		<section class="SHK-aviation">
-			<h1 class="SHK-title">SHK Aviation Academy</h1>
-			<p>
-				SHK AVIATION ACADEMY is a multidisciplinary institution offering
-				professional courses in the field of aviation. SHK AVIATION ACADEMY was
-				established in 2020 with a great visionary, to revolutionize the way
-				people are getting trained for Aviation industry. This institution is
-				run by Govindasamy Naidu Educational Trust, which is registered as a
-				Technical Education Society under the Societies Act, XXI of 1860. The
-				institute is approved Alagappa University, for conducting Aviation
-				related courses.
-			</p>
+			<div>
+				<h1 class="SHK-title">SHK Aviation Academy</h1>
+				<p>
+					SHK AVIATION ACADEMY is a multidisciplinary institution offering
+					professional courses in the field of aviation. SHK AVIATION ACADEMY
+					was established in 2020 with a great visionary, to revolutionize the
+					way people are getting trained for Aviation industry. This institution
+					is run by Govindasamy Naidu Educational Trust, which is registered as
+					a Technical Education Society under the Societies Act, XXI of 1860.
+					The institute is approved Alagappa University, for conducting Aviation
+					related courses.
+				</p>
+			</div>
 		</section>
 		<script src="./common/nav/nav.js"></script>
 		<script src="./home/home.js"></script>
