--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 				</p>
 			</div>
 		</section>
+		section
 		<script src="./common/nav/nav.js"></script>
 		<script src="./home/home.js"></script>
 	</body>
