--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="facilities.css" />
-		<link rel="stylesheet" href="./SHK_Aviation_Academy/common/nav/nav.css">
+		<link rel="stylesheet" href="../common/nav/nav.css">
 	
 		<title>Facilities</title>
 	</head>
@@ -24,7 +24,7 @@
 					src="https://img.icons8.com/material-outlined/24/000000/airplane-mode-on.png"
 			/></span>
 			<span class="main-icon"
-				><img src="./SHK_Aviation_Academy/common/images/SHK_logo" alt=""
+				><img src="./common/images/SHK_logo" alt=""
 			/></span>
 			<div class="social">
 				<img
