--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
 			<div class="swiper mySwiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<h1>
-							To most people, the sky is the limit. To those who love aviation,
-							the sky is home. - Jerry Crawford
+						<h1 class="slide-h1">
+							<span> To most people, the sky is the limit.</span><br /><span>
+								To those who love aviation, the sky is home.</span
+							><br /><span> - Jerry Crawford</span>
 						</h1>
 						<img
 							class="carousel-img-1"
@@ -84,10 +85,12 @@
 						/>
 					</div>
 					<div class="swiper-slide">
-						<h1>
-							“Man must rise above the Earth—to the top of the atmosphere and
-							beyond—for only thus will he fully understand the world in which
-							he lives.” – Socrates
+						<h1 class="slide-h1">
+							<span
+								>Man must rise above the Earth—to the top of the atmosphere and
+								beyond—for only thus will he fully understand the world in which
+								he lives.</span
+							><br /><span> – Socrates</span>
 						</h1>
 						<img
 							class="carousel-img-2"
@@ -96,10 +99,12 @@
 						/>
 					</div>
 					<div class="swiper-slide">
-						<h1>
-							In the midst of a healthy and intellectual upbringing, he obtained
-							his Bachelor Degree in Production Engineering from Madras
-							University.
+						<h1 class="slide-h1">
+							<span>
+								In the midst of a healthy and intellectual upbringing, he
+								obtained his Bachelor Degree in Production Engineering from
+								Madras University.</span
+							>
 						</h1>
 						<img
 							class="carousel-img-3"
@@ -115,8 +120,8 @@
 		</section>
 		<section class="vision-and-mission">
 			<div class="vision">
-				<h1>VISION</h1>
-				<p>
+				<h1 class="vision-h1">VISION</h1>
+				<p class="vision-p">
 					To be a premier institute that imparts quality Technical & Skill
 					Training Education & Research, to create ethical and responsible
 					employees and entrepreneurs, to address the socioeconomic needs of the
@@ -124,8 +129,8 @@
 				</p>
 			</div>
 			<div class="mission">
-				<h1>MISSION</h1>
-				<ul>
+				<h1 class="mission-h1">MISSION</h1>
+				<ul class="mission-ul">
 					<li>
 						To create the state-of-art infrastructure and equipment to instill
 						innovation and best practices in teaching, training and research.
