--- a/common/footer/footer.html
+++ b/common/footer/footer.html
@@ -50,5 +50,16 @@
         </div>
       </section>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+    <script>
+      const T1 = gsap.timeline({scrollTrigger:{trigger:'.footer',start:'top 75%'}})
+      T1.from('.upper',{duration:0.5, y:0})
+      // if(window.scrollY <= 120){
+      //   console.log(window.scrollY);
+      //    T1.reverse('.upper',{duration:0.5, y:0})
+      // }
+      // gsap.to('.upper',{scrollTrigger:{trigger:'.footer',start:'top 100%'},duration:0.5, y:0})
+    </script>
   </body>
 </html>
