--- a/academics/academics.html
+++ b/academics/academics.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../common/nav/nav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="academics.css" />
     <title>Academics</title>
 </head>
@@ -42,19 +45,21 @@
 
 
 
-    <div>
+    <div class="firstdiv">
         <h1 class="titlename">Academics</h1>
-
-        <div class="coursefour" id="course1">
+        <div class="courseone">
+            <div id="course1"></div>
             <h2>BBA Airlines and Airport Management</h2>
             <p>
                 India’s Aviation Industry is expected to witness Rs 35,000 crore (US$ 4.99 billion) investment in the
                 next
                 four years. SHK AVIATION ACADEMY’s BBA in Airline and Airport Management degree will help students get
-                ahead
-                in the high-powered aviation industry. This course caters to those students who are seeking careers in
-                management and operation in the airside activities of the aviation industry. This course explores all
-                facets<span class="span1">
+                ahead<span class="span1">
+                    in the high-powered aviation industry. This course caters to those students who are seeking careers
+                    in
+                    management and operation in the airside activities of the aviation industry. This course explores
+                    all
+                    facets
                     of business administration and management. It is a 3 years long Undergraduate program. BBA program
                     in
                     Airport Management trains students to take on managerial as well as administrative roles in an
@@ -66,7 +71,7 @@
                     deal with technical sections like Air Traffic and Control, maintenance staff, cargo department and
                     coordinate them all, manage finances etc.
                 </span>
-                <button class="button1">Watch This</button>
+                <button class="button1">Read More</button>
             </p>
 
 
@@ -78,8 +83,8 @@
 
             <div class="contentdiv">
                 <div class="flexdiv">
-                    <h4>Eligibility Criteria</h4>
-                    <button class="watch watch2">Watch This</button>
+                    <h4 class="topcss">Eligibility Criteria</h4>
+                    <button class="watch watch2">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para2">Students who have passed 12th standard board examinations (any stream
@@ -95,7 +100,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>For the Degree:</h4>
-                    <button class="watch watch3">Watch This</button>
+                    <button class="watch watch3">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para3">
@@ -113,7 +118,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Admission:</h4>
-                    <button class="watch watch4">Watch This</button>
+                    <button class="watch watch4">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para4">Admission is based on the marks in the qualifying examination.</p>
@@ -125,7 +130,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Duration of the course:</h4>
-                    <button class="watch watch5">Watch This</button>
+                    <button class="watch watch5">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para5">
@@ -142,7 +147,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Career</h4>
-                    <button class="watch watch6">Watch This</button>
+                    <button class="watch watch6">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para6">BBA Aviation graduates have different career paths and opportunities available
@@ -164,18 +169,18 @@
 
 
 
-
-        <div class="coursefour" id="course2">
+        <div class="coursetwo">
+            <div id="course2"></div>
             <h2>BSC Aviation</h2>
             <p>
                 SHK AVIATION ACADEMY is the nexus of aviation education, students benefit from much more than prestige;
                 they
                 learn from experienced faculty who share first-hand knowledge in aviation and who are at the forefront
                 in
-                the developing field of aircraft.
-                B.Sc. Aviation course is related to the field of Aviation Science. Aviation science deals with the
-                study,
-                design and operation of flight capable machine<span class="span1"> like aircraft, helicopters, gliders ,
+                the developing field<span class="span1"> of aircraft.
+                    B.Sc. Aviation course is related to the field of Aviation Science. Aviation science deals with the
+                    study,
+                    design and operation of flight capable machine like aircraft, helicopters, gliders ,
                     etc. The Bachelor of
                     Science in Aviation program provides graduates with the necessary skills and knowledge needed to
                     become
@@ -189,7 +194,7 @@
                     job opportunities to graduates.
 
                 </span>
-                <button class="button1">Watch This</button>
+                <button class="button1">Read More</button>
             </p>
 
 
@@ -202,8 +207,8 @@
 
             <div class="contentdiv">
                 <div class="flexdiv">
-                    <h4>Eligibility Criteria</h4>
-                    <button class="watch watch22">Watch This</button>
+                    <h4 class="topcss">Eligibility Criteria</h4>
+                    <button class="watch watch22">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para22">Students who have passed 10+2 Science stream from a recognized board with
@@ -219,7 +224,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>For the Degree:</h4>
-                    <button class="watch watch23">Watch This</button>
+                    <button class="watch watch23">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para23">
@@ -237,7 +242,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Admission:</h4>
-                    <button class="watch watch24">Watch This</button>
+                    <button class="watch watch24">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para24">Admission is based on the marks in the qualifying examination.</p>
@@ -249,7 +254,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Duration of the course:</h4>
-                    <button class="watch watch25">Watch This</button>
+                    <button class="watch watch25">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para25">
@@ -266,7 +271,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Career</h4>
-                    <button class="watch watch26">Watch This</button>
+                    <button class="watch watch26">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para26">B.Sc. Aviation graduates have different career paths and opportunities
@@ -294,20 +299,21 @@
 
 
 
-
-        <div class="coursefour" id="course3">
+        <div class="coursethree">
+            <div id="course3"></div>
             <h2>MBA Airlines and Airport Management</h2>
             <p>
                 The Master of Business Administration in Aviation degree provides strong foundations for success in any
                 facet of the global aviation business arena. It provides traditional business skills, but is unique in
                 its
                 focus on the aviation. Though the degree provides specialized insight into the global business
-                environment,
-                it sets up graduates for success in non-aviation industries as well. The courses within the program
-                deliver
-                the required MBA core content while investigating trends in the key industry segments in the world of
-                aviation.The curriculum has been developed, and continues to evolve with close attention paid to the
-                demands<span class="span1">
+                environment,<span class="span1">
+                    it sets up graduates for success in non-aviation industries as well. The courses within the program
+                    deliver
+                    the required MBA core content while investigating trends in the key industry segments in the world
+                    of
+                    aviation.The curriculum has been developed, and continues to evolve with close attention paid to the
+                    demands
                     of the industry. Most of the courses contain a research component that will provide experience and
                     an
                     insider’s examination of global business practices. The program culminates with a capstone course
@@ -322,7 +328,7 @@
                     aptitudes to foresee and govern the business difficulties and open the doors for the blooming of the
                     organization.
                 </span>
-                <button class="button1">Watch This</button>
+                <button class="button1">Read More</button>
             </p>
 
 
@@ -337,8 +343,8 @@
 
             <div class="contentdiv">
                 <div class="flexdiv">
-                    <h4>Eligibility Criteria</h4>
-                    <button class="watch watch32">Watch This</button>
+                    <h4 class="topcss">Eligibility Criteria</h4>
+                    <button class="watch watch32">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para32">Candidate for admission to MBA in Airline and Airport Management shall be
@@ -354,7 +360,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>For the Degree:</h4>
-                    <button class="watch watch33">Watch This</button>
+                    <button class="watch watch33">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para33">
@@ -373,7 +379,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Admission:</h4>
-                    <button class="watch watch34">Watch This</button>
+                    <button class="watch watch34">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para34">Admission based on the marks in the qualifying examination. </p>
@@ -385,7 +391,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Duration of the course:</h4>
-                    <button class="watch watch35">Watch This</button>
+                    <button class="watch watch35">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para35">
@@ -401,7 +407,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Career</h4>
-                    <button class="watch watch36">Watch This</button>
+                    <button class="watch watch36">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para36">The various job roles that Students can have upon successful completion of
@@ -435,16 +441,18 @@
 
 
 
-
-        <div class="coursefour" id="course4">
+        <div class="coursefour">
+            <div id="course4"></div>
             <h2>BSC AIRCRAFT MAINTENANCE</h2>
             <p>
                 This course prepares students in the Technical aspects of Aviation, especially in Maintenance, Repair
                 and Overhauling, Airlines, Airports and other Aviation Technical matters. The students are exposed to
-                Live Operational Aircraft during the course at facilities of Indigo Airlines and Airworks India
-                Engineering. The course helps students learn the fundamentals of Aeronautical Science specifically in
-                reference to Aircraft Operations.
-                <span class="span1">It also aims to develop Student’s interest in Aeronautics and related fields. It
+                Live Operational Aircraft <span class="span1">during the course at facilities of Indigo Airlines and
+                    Airworks India
+                    Engineering. The course helps students learn the fundamentals of Aeronautical Science specifically
+                    in
+                    reference to Aircraft Operations.
+                    It also aims to develop Student’s interest in Aeronautics and related fields. It
                     develop
                     the skills to identify problems that may be detrimental to the safe operations of an Aircraft in the
                     quickest and safest possible manner. To understand that Safety and Quality cannot be compromised.
@@ -455,7 +463,7 @@
                     and
                     sports activities are well-planned in a calendar of events to bring out the best in a
                     Student.</span>
-                <button class="button1">Watch This</button>
+                <button class="button1 topcss">Read More</button>
             </p>
 
 
@@ -465,8 +473,8 @@
 
             <div class="contentdiv">
                 <div class="flexdiv">
-                    <h4>Objective:</h4>
-                    <button class="watch watch1">Watch This</button>
+                    <h4 class="topcss">Objective:</h4>
+                    <button class="watch watch1">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para1">The 3 years Bachelor Degree BSc (Aircraft Maintenance) is offered with the
@@ -488,7 +496,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Eligibility Criteria</h4>
-                    <button class="watch watch42">Watch This</button>
+                    <button class="watch watch42">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para42">A pass in the Higher Secondary Examination (HSC) conducted by the Government
@@ -510,7 +518,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>For the Degree:</h4>
-                    <button class="watch watch43">Watch This</button>
+                    <button class="watch watch43">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para43">
@@ -531,7 +539,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Admission:</h4>
-                    <button class="watch watch44">Watch This</button>
+                    <button class="watch watch44">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para44">Admission is based on the marks in the qualifying examination.</p>
@@ -543,7 +551,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Duration of the course:</h4>
-                    <button class="watch watch45">Watch This</button>
+                    <button class="watch watch45">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para45">
@@ -559,7 +567,7 @@
             <div class="contentdiv">
                 <div class="flexdiv">
                     <h4>Career</h4>
-                    <button class="watch watch46">Watch This</button>
+                    <button class="watch watch46">Read More</button>
                 </div>
                 <div class="paragraph">
                     <p class="para para46">The various job roles that Students can have upon successful completion of
@@ -594,33 +602,40 @@
 
 
 
-
-    <div class="legend">
-        <table>
-            <tr>
-                <td>
-                    <h3><a class="bba" href="#course1"> BBA Airlines and Airport Management</a></h3>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <h3><a class="bscaviation" href="#course2"> BSC Aviation</a></h3>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <h3><a class="mba" href="#course3"> MBA Airlines and Airport Management</a></h3>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <h3><a class="bscair" href="#course4"> BSC Aircraft Maintenance</a></h3>
-                </td>
-            </tr>
-        </table>
+    <div class="mobileclick">
+        <i class="fas fa-chevron-left arrowl arrow"></i>
+        <i class="fas fa-chevron-right arrowr arrow"></i>
     </div>
-    <script src="../common/nav/nav.js"></script>
+    <div class="again">
+        <div class="legend">
+            <table class="table">
+                <tr>
+                    <td class="bba">
+                        <h3>BBA Airlines and Airport Management</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="bscaviation">
+                        <h3> BSC Aviation</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="mba">
+                        <h3> MBA Airlines and Airport Management</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="bscair">
+                        <h3> BSC Aircraft Maintenance</h3>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
     <script src="academics.js"></script>
+    <script src="../common/nav/nav.js"></script>
 </body>
 
 </html>
