--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./common/nav/nav.css" />
+		<link rel="stylesheet" href="./common/footer/footer.css" />
 		<link rel="stylesheet" href="./home/home.css" />
 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
 		/>
-		<title>Home | SHK</title>
+		<title>SHK Aviation Academy</title>
 	</head>
 	<body>
 		<header>
@@ -145,10 +146,126 @@
 				</ul>
 			</div>
 		</section>
+		<section class="SHK-heads">
+			<div>
+				<div class="heads">
+					<!-- <div class="heads-num">
+						<div>1</div>
+						<div>2</div>
+						<div>3</div>
+						<div>4</div>
+						<div>5</div>
+						<div>6</div>
+					</div> -->
+					<div class="heads-pos">
+						<div>Chairman</div>
+						<div>Vice Chairman</div>
+						<div>Chairperson</div>
+						<div>vice Chairperson</div>
+						<div>Director</div>
+						<div>Chief Executive Officier</div>
+						<div>Principal</div>
+					</div>
+				</div>
+				<div>
+					<h1 class="head-content-title">WHY AVIATION ?</h1>
+					<p class="head-content-para">
+						Aviation is one of the most “global” industries: connecting people,
+						cultures and businesses across continents. Colleagues throughout the
+						sector are committed to raising awareness of the benefits and the
+						role of aviation.
+					</p>
+				</div>
+			</div>
+		</section>
+		<section class="contact-sec">
+			<div class="contact-aside"></div>
+			<h1 class="contact-title">CONTACT</h1>
+			<form action="mailto:sample@gmail.com" method="post">
+				<input
+					type="text"
+					class="input"
+					name="fname"
+					id="fname"
+					placeholder="First Name"
+					required
+				/><br />
+				<input
+					type="text"
+					class="input"
+					name="lname"
+					id="lname"
+					placeholder="Last Name"
+					required
+				/><br />
+				<input
+					type="text"
+					class="input"
+					name="email"
+					id="email"
+					placeholder="Email"
+					required
+				/><br />
+				<textarea class="text-area" name="message" id="message">
+Type your message here...</textarea
+				>
+				<a class="next-submit">Next</a>
+				<button class="submit" disabled>Submit</button>
+			</form>
+		</section>
+		<footer class="footer">
+			<section class="top">
+				<div class="footerLeft">
+					<div class="upper">
+						<img src="./common/images/SHK_logo" alt="Logo" />
+					</div>
+				</div>
+				<div class="footerRight">
+					<ul>
+						<li><a href="">HOME</a></li>
+						<li><a href="">ABOUT</a></li>
+						<li><a href="">FACILITIES</a></li>
+						<li><a href="">ACADEMICS</a></li>
+					</ul>
+					<ul>
+						<li><a href="">ACTIVITIES</a></li>
+						<li><a href="">ADMISSION</a></li>
+						<li><a href="">CONTACT US</a></li>
+						<li><a href="">PLACEMENTS</a></li>
+					</ul>
+				</div>
+			</section>
+			<span class="footerline"></span>
+			<section class="bottom">
+				<div class="social">
+					<a href=""
+						><img
+							src="https://img.icons8.com/fluency-systems-regular/48/ffffff/facebook.png"
+					/></a>
+					<a href=""
+						><img
+							src="https://img.icons8.com/material-outlined/48/ffffff/instagram-new--v1.png"
+					/></a>
+					<a href=""
+						><img
+							src="https://img.icons8.com/material-outlined/48/ffffff/twitter.png"
+					/></a>
+					<a href=""
+						><img src="https://img.icons8.com/ios-filled/48/ffffff/gmail.png"
+					/></a>
+				</div>
+				<div class="copyrights">
+					<h1>&copy; &nbsp;COPYRIGHT SHK AVIATION ACADEMY</h1>
+				</div>
+			</section>
+		</footer>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.js"></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 		<script src="./common/nav/nav.js"></script>
+		<script src="./common/footer/footer.js"></script>
 		<script src="./home/home.js"></script>
 	</body>
 </html>
