--- a/index.html
+++ b/index.html
@@ -149,14 +149,7 @@
 		<section class="SHK-heads">
 			<div>
 				<div class="heads">
-					<!-- <div class="heads-num">
-						<div>1</div>
-						<div>2</div>
-						<div>3</div>
-						<div>4</div>
-						<div>5</div>
-						<div>6</div>
-					</div> -->
+					<h1>MANAGEMENT TEAM</h1>
 					<div class="heads-pos">
 						<div>Chairman</div>
 						<div>Vice Chairman</div>
@@ -261,10 +254,10 @@ Type your message here...</textarea
 		</footer>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+		<script src="./common/nav/nav.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.js"></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-		<script src="./common/nav/nav.js"></script>
 		<script src="./common/footer/footer.js"></script>
 		<script src="./home/home.js"></script>
 	</body>
