--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 			<div class="bottom-nav">
-				<span><a href="./index.html">HOME</a></span
+				<span><a href="../index.html">HOME</a></span
 				><span><a href="./about/about.html">ABOUT</a></span
 				><span><a href="./academics/academics.html">ACADEMICS</a></span
 				><span><a href="./facilities/facilities.html">FACILITIES</a></span
