--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Type your message here...</textarea
 					<ul>
 						<li><a href="./academics/academics.html">ACTIVITIES</a></li>
 						<li><a href="./admission/admission.html">ADMISSION</a></li>
-						<li><a href="./index.html#contact"></a>CONTACT US</a></li>
+						<li><a href="./index.html#contact">CONTACT US</a></li>
 						<li><a href="./placements/placements.html">PLACEMENTS</a></li>
 					</ul>
 				</div>
