--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 					/><img src="https://img.icons8.com/color/48/000000/facebook.png" />
 				</div>
 			</div>
-			<div class="bottom-nav">
-				<span><a href="./index.html">HOME</a></span
-				><span><a href="./about/about.html">ABOUT</a></span
-				><span><a href="./academics/academics.html">ACADEMICS</a></span
-				><span><a href="./facilities/facilities.html">FACILITIES</a></span
-				><span><a href="./activities/activities.html">ACTIVITIES</a></span
-				><span><a href="./placements/placements.html">PLACEMENTS</a></span
-				><span><a href="./admission/admission.hrml">ADMISSION</a></span>
-			</div>
+			<ul class="bottom-nav">
+				<li><a href="./index.html">HOME</a></li>
+				<li><a href="./about/about.html">ABOUT</a></li>
+				<li><a href="./academics/academics.html">ACADEMICS</a></li>
+				<li><a href="./facilities/facilities.html">FACILITIES</a></li>
+				<li><a href="./activities/activities.html">ACTIVITIES</a></li>
+				<li><a href="./placements/placements.html">PLACEMENTS</a></li>
+				<li><a href="./admission/admission.hrml">ADMISSION</a></li>
+			</ul>
 		</header>
 		<div class="hero">
 			<img class="plane-hero" src="./home/img/airplane_png.png" alt="" />
