--- a/about/about.html
+++ b/about/about.html
@@ -33,7 +33,7 @@
         </div>
         <ul class="bottom-nav">
             <li><a href="../index.html">HOME</a></li>
-            <li><a href="../about/about.html">ABOUT</a></li>
+            <li class="about"><a href="../about/about.html">ABOUT</a></li>
             <li><a href="../academics/academics.html">ACADEMICS</a></li>
             <li><a href="../facilities/facilities.html">FACILITIES</a></li>
             <li><a href="../activities/activities.html">ACTIVITIES</a></li>
