--- a/academics/academics.html
+++ b/academics/academics.html
@@ -31,7 +31,7 @@
         <ul class="bottom-nav">
             <li><a href="../index.html">HOME</a></li>
             <li><a href="../about/about.html">ABOUT</a></li>
-            <li><a href="../academics/academics.html">ACADEMICS</a></li>
+            <li class="academics"><a href="../academics/academics.html">ACADEMICS</a></li>
             <li><a href="../facilities/facilities.html">FACILITIES</a></li>
             <li><a href="../activities/activities.html">ACTIVITIES</a></li>
             <li><a href="../placements/placements.html">PLACEMENTS</a></li>
