--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 			</div>
 		</section>
 		<section class="SHK-heads">
+			<div class="SHK-heads-aside"></div>
 			<div>
 				<div class="heads">
 					<h1>MANAGEMENT TEAM</h1>
