--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 		<title>SHK Aviation Academy</title>
 	</head>
 	<body>
+		<div class="preload">
+			<div>
+				<img src="./common/images/SHK_logo" alt="" />
+			</div>
+		</div>
 		<header>
 			<div class="top-nav">
 				<span class="contact"
