--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					required
 				/><br />
 				<input
-					type="text"
+					type="email"
 					class="input"
 					name="email"
 					id="email"
